--- a/src/AndroidStudioProject/Again_Bluetooth/app/src/main/res/values/strings.xml
+++ b/src/AndroidStudioProject/Again_Bluetooth/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Again_Bluetooth</string>
+    <string name="app_name">Genie</string>
     <string name="action_settings">Settings</string>
 </resources>
